# xfce4-wayland-kbdstate-plugin

./: README.md  meson.build  wayland-kbdstate.desktop.in
scripts/: meson-postinstall.sh  restart-panel.sh
src/: plugin-entry.c  wayland-kbdstate.cpp  wayland-kbdstate.css
